# mvc

./: .gitignore  README.md  pyproject.toml
app/: Dockerfile  app.py  requirements.txt
docker/: Dockerfile
notebooks/: kfp-pipeline.ipynb  prophet.ipynb
simple-deploy-model/: README.md  app.py  data.csv  model.pickle  requirements.txt  train.py
train/: Dockerfile  train_pipeline.py
