[tool.poetry]
name = "mvc"
version = "0.1.0"
description = ""
authors = ["Andrew Rubino <arubino322@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.1"
pandas = "^2.2.3"
jupyter = "^1.1.1"
prophet = "^1.1.6"
google-cloud-bigquery = "^3.28.0"
db-dtypes = "^1.3.1"
kfp = "^2.11.0"
google-cloud-aiplatform = "^1.78.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
